# MyCoreShell

./: README.md
MyShell/: CMakeLists.txt  TestShell.sh  buildProject.sh  test_shell.py
MyShell/src/: builtins.cpp  builtins.hpp  main.cpp  shell.cpp  shell.hpp  utils.cpp  utils.hpp
diagrams/: plantuml.txt
